# binary-fusion

./: .gitignore  README.md  pyproject.toml
binary_fusion/: __main__.py  analyzer.py  fuser.py
demo/: custom_section.c  jules.c  obj_test  static_test.c  test32.c
src/binary_fusion/: analyzer.py  fuser.py  main.py
stub/: build_stub.sh  stub  stub.c  stub_zlib
tests/fixtures/: build_fixtures.sh  jules  jules_static  vincent  vincent.c  vincent_static
