[project]
name = "binary-fusion"
version = "0.1.0"
description = "A CLI tool that merges two ELF executables into a single binary"
requires-python = ">=3.12"
dependencies = [
    "lief>=0.14",
]

[project.scripts]
fuser = "binary_fusion.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binary_fusion"]
